syntax = "proto3";
package room;
option go_package = "server/protobuf/pbs/room";
//import "proto/common/common.proto";

message userMessage{
  string name = 1;
  string content = 2;
}

message newUser{
  string content = 1;
}

message allMembers{
  repeated int64 members = 1;
}

message joinResponse{
  int32 code = 1;
  string result = 2;
}
